Reduced skillset star size to fix Safari alignment issue.

--- a/src/css/Skillset.css
+++ b/src/css/Skillset.css
@@ -61,3 +61,7 @@
 #skillset p {
     padding-left: 2em;
 }
+
+.fa-xs {
+    font-size: 0.67em;
+}
